--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     			<a class="active" href="index.html">Home</a>
     			<a href="aboutme1.html">About Me</a>
     			<a href="codecode2.html">Academics</a>
+          <a href="Projects.html">Projects</a>
     		</div>
  
 
