--- a/aboutme1.html
+++ b/aboutme1.html
@@ -7,6 +7,8 @@
     			<a class="active" href="index.html">Home</a>
     			<a href="aboutme1.html">About Me</a>
     			<a href="codecode2.html">Academics</a>
+          <a href="Projects.html">Projects</a>
+      
     		</div>
  
     <link rel="stylesheet" href="style.css">
